5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/3135/executions/1715_3034.log
== TEST (2019-05-02 17:38:27) 
-- CODE:
from math import*
x=float(input("Insira o valor de X"))
xab=abs(x)
-- OUTPUT:
PO insuficiente
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 17:38:38) 
-- CODE:
from math import*
x=float(input("Insira o valor de X"))
xab=abs(x)

print(x)
-- OUTPUT:
2.56
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 17:38:51) 
-- CODE:
from math import*
x=float(input("Insira o valor de X"))
xab=abs(x)

print(xab)
-- OUTPUT:
2.56
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 17:40:40) 
-- CODE:
from math import*
x=float(input("Insira o valor de X"))
xab=abs(x)**0.5

if(-4<=x or x<0)
	print(round(xab,4))
	
-- ERROR:
File "XXXX", line 5
    if(-4<=x or x<0)
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 17:40:43) 
-- CODE:
from math import*
x=float(input("Insira o valor de X"))
xab=abs(x)**0.5

if(-4<=x or x<0):
	print(round(xab,4))
	
-- OUTPUT:
1.6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 17:41:20) 
-- CODE:
from math import*
x=float(input("Insira o valor de X"))
xab=abs(x)**0.5

if(-4<=x or x<0):
	print(round(xab,4))
elif(x==0)
	print(0)
	
-- ERROR:
File "XXXX", line 7
    elif(x==0)
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 17:41:23) 
-- CODE:
from math import*
x=float(input("Insira o valor de X"))
xab=abs(x)**0.5

if(-4<=x or x<0):
	print(round(xab,4))
elif(x==0):
	print(0)
	
-- OUTPUT:
1.6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 17:41:48) 
-- CODE:
from math import*
x=float(input("Insira o valor de X:"))
xab=abs(x)**0.5

if(-4<=x or x<0):
	print(round(xab,4))
elif(x==0):
	print(abs(0))
	
-- OUTPUT:
1.6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 17:43:20) 
-- CODE:
from math import*
x=float(input("Insira o valor de X:"))
xab=abs(x)**0.5
X=x**0.5
if(-4<=x or x<0):
	print(round(xab,4))
elif(x==0):
	print(0)
elif(0<x or x<=4)
	print(round(X,4))
else:
	print("entrada invalida")
-- ERROR:
File "XXXX", line 9
    elif(0<x or x<=4)
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 17:43:24) 
-- CODE:
from math import*
x=float(input("Insira o valor de X:"))
xab=abs(x)**0.5
X=x**0.5
if(-4<=x or x<0):
	print(round(xab,4))
elif(x==0):
	print(0)
elif(0<x or x<=4):
	print(round(X,4))
else:
	print("entrada invalida")
-- OUTPUT:
1.6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 17:43:48) 
-- CODE:
from math import*
x=float(input("Insira o valor de X:"))
xab=abs(x)**0.5
X=x**0.5
if(-4<=x or x<0):
	print(round(xab,4))
elif(x==0):
	print(0)
elif(0<x or x>=4):
	print(round(X,4))
else:
	print("entrada invalida")
-- OUTPUT:
1.6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 17:44:04) 
-- CODE:
from math import*
x=float(input("Insira o valor de X:"))
xab=abs(x)**0.5
X=x**0.5
if(-4<=x or x<0):
	print(round(xab,4))
elif(x==0):
	print(0)

elif(0<x or x>=4):
	print(round(X,4))
else:
	print("entrada invalida")
-- EXECUTION TIME:
0.167612
-- TEST CASE 1:
---- input:
2.56
---- correct output:
1.6
---- user output:
1.6
-- TEST CASE 2:
---- input:
3.99
---- correct output:
1.9975
---- user output:
1.9975
-- TEST CASE 3:
---- input:
-3.99
---- correct output:
1.9975
---- user output:
1.9975
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
